<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/loginButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="5dp"
        android:background="@color/colorBlue1"
        android:fontFamily="@font/montserrat"
        android:gravity="center"
        android:text="@string/loginButton"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="20dp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/signupButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signupButton"
        android:layout_below="@id/loginButton"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorWhite"
        android:background="@color/colorGreen1"
        android:gravity="center"
        android:textSize="20dp"
        android:textStyle="bold"
        android:fontFamily="@font/montserrat"
        android:textAllCaps="false"
        android:layout_margin="5dp"
        />

    <Button
        android:id="@+id/signoutButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signoutButton"
        android:layout_below="@id/signupButton"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorWhite"
        android:background="@color/colorGreen1"
        android:gravity="center"
        android:textSize="20dp"
        android:textStyle="bold"
        android:fontFamily="@font/montserrat"
        android:textAllCaps="false"
        android:layout_margin="5dp"
        />

</RelativeLayout>